<resources>
    <string name="app_name">SpaceRace</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="enter_your_name">Пожалуйста, введите Ваше имя.</string>
    <string name="name">Имя</string>
    <string name="start">Начало</string>
    <string name="new_start">Начать Заново</string>
    <string name="result">Результат</string>
    <string name="conqura">Поздравляю!</string>
    <string name="finish">Финиш</string>
</resources>